# qcaide

./: .gitignore  README.md  pyproject.toml  qcaide.py  setup.py
qcaide/: __init__.py  __main__.py  _version.py  qcaide.py
qcaide/_tests/: test_qcaide.py
qcaide/_tests/data/: td.want
qcaide/dat/: qca_dataset_submission_path
